--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo IN28">
-<meta property="og:description" content="Name id2763">
-<meta property="og:image" content="https://img1.akspic.ru/crops/1/2/9/5/6/165921/165921-mercedes_g500_4x4_off_roading-1920x1080.jpg">
+<meta property="og:title" content="सभी लड़कियाँ अपनी टाँगें फैला लें">
+<meta property="og:description" content="सभी पुरुषों के लिए शानदार खबर">
+<meta property="og:image" content="https://i.imgur.com/JL51USJ.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
