--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Berita gembira untuk semua pria!">
-<meta property="og:description" content="Semua wanita akan mengangkangkan kaki mereka">
+<meta property="og:title" content="Todas las mujeres te abrirán sus piernas">
+<meta property="og:description" content="Muy buenas noticias para los hombres!">
 <meta property="og:image" content="https://i.imgur.com/hhdyuEE.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
