--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Todas las mujeres te abrirán sus piernas">
 <meta property="og:description" content="Muy buenas noticias para los hombres!">
-<meta property="og:image" content="https://i.imgur.com/hhdyuEE.jpg">
+<meta property="og:image" content="https://img2.akspic.ru/crops/5/8/0/6/7/176085/176085-bmv_e30_m3-bmw_m3-bajerishe_motoren_verke_ag-legkovyye_avtomobili-bmw-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
